--- a/templates/index.html
+++ b/templates/index.html
@@ -158,7 +158,7 @@
     <div class="container" id="capture-area">
         <div class="user-info">
             {% if current_user.is_authenticated %}
-                こんにちは、{{ current_user.username }}さん！
+                ログインID:{{ current_user.username }}
                 <a href="{{ url_for('auth.logout') }}" class="btn btn-outline-secondary btn-sm ml-2">ログアウト</a>
                 {% if current_user.is_admin %}
                     <a href="{{ url_for('admin.settings_auth') }}" class="btn btn-outline-warning btn-sm ml-2">設定</a>
@@ -242,7 +242,7 @@
                     } else if (data.username) {
                         shiftInfoBelowTable.innerHTML = `名前: ${data.username}`;
                     } else {
-                        shiftInfoBelowTable.innerHTML = `作成者: 未ログイン`;
+                        shiftInfoBelowTable.innerHTML = `未ログイン`;
                     }
                 })
                 .catch(error => {
